prueva box shadow

--- a/productos/patisserieMerengues.html
+++ b/productos/patisserieMerengues.html
@@ -43,7 +43,7 @@
     </div>
 </header>
     <main>
-        <a class="volver" href="../catalogo/patisserie.html"><h5 class="subtitulo_productos">Catálogo > Patisserie</h5></a>
+        <a class="volver" href="../catalogo/patisserie.html"><h5 class="textoVolver">Catálogo > Patisserie</h5></a>
         <div class="container-fluid">
           <div class="row">
             <div class="col-md-6">
@@ -69,43 +69,38 @@
             </div>
           </div>
         </div>
-        <h5 class="subtitulo_productos text-center">Productos relacionados</h5>
-        <div class="container-fluid">
+        <h5 class="subtitulo_productos pt-5">Productos relacionados</h5>
             <div class="row cartaProducto">
-                <div class="col">
-                    <div class="card carta">
-                        <a href="../productos/patisseriePaletas.html"><img src="../multimedia/Fotos Producto/p_paletas.jpg" class="card-img-top" alt="patisserie Paletas"></a>
-                        <div class="card-body">
-                        <p class="card-text carta-text">Paletas</p>
-                        </div>
-                    </div>
+              <div class="col-6 col-md-3 card carta">
+                <a href="../productos/patisseriePaletas.html"><img src="../multimedia/Fotos Producto/p_paletas.jpg"
+                    class="card-img-top" alt="patisserie Paletas"></a>
+                <div class="card-body">
+                  <p class="card-text carta-text">Paletas</p>
                 </div>
-                <div class="col">
-                    <div class="card carta">
-                        <a href="../productos/patisseriePie.html"><img src="../multimedia/Fotos Producto/p_lemon_pie.jpg" class="card-img-top" alt="patisserie pie"></a>
-                        <div class="card-body">
-                        <p class="card-text carta-text">Lemon pie</p>
-                        </div>
-                    </div>
+              </div>
+              <div class="col-6 col-md-3 card carta">
+                <a href="../productos/patisseriePie.html"><img src="../multimedia/Fotos Producto/p_lemon_pie.jpg"
+                    class="card-img-top" alt="patisserie pie"></a>
+                <div class="card-body">
+                  <p class="card-text carta-text">Lemon pie</p>
                 </div>
-                <div class="col">
-                    <div class="card carta">
-                        <a href="../productos/patisserieCupcakes.html"><img src="../multimedia/Fotos Producto/p_cupcakes.jpg" class="card-img-top" alt="patisserie Cupcake"></a>
-                        <div class="card-body">
-                        <p class="card-text carta-text">Cupcake</p>
-                        </div>
-                    </div>
+              </div>
+              <div class="col-6 col-md-3 card carta">
+                <a href="../productos/patisserieCupcakes.html"><img src="../multimedia/Fotos Producto/p_cupcakes.jpg"
+                    class="card-img-top" alt="patisserie Cupcake"></a>
+                <div class="card-body">
+                  <p class="card-text carta-text">Cupcake</p>
                 </div>
-                <div class="col">
-                  <div class="card carta">
-                    <a href="../productos/patisserieCheescake.html"><img src="../multimedia/Fotos Producto/p_cheescake.jpg" class="card-img-top" alt="patisserie cheesecake"></a>
-                    <div class="card-body">
-                    <p class="card-text carta-text">Cheescake</p>
-                    </div>
-                  </div>
+              </div>
+              <div class="col-6 col-md-3 card carta">
+                <a href="../productos/patisserieCheescake.html"><img src="../multimedia/Fotos Producto/p_cheescake.jpg"
+                    class="card-img-top" alt="patisserie cheesecake"></a>
+                <div class="card-body">
+                  <p class="card-text carta-text">Cheescake</p>
                 </div>
+              </div>
+            
             </div>
-          </div>
     </main>
     <footer>
         <div class="container-fluid borde_pie">
