--- a/productos/patisseriePaletas.html
+++ b/productos/patisseriePaletas.html
@@ -43,14 +43,14 @@
     </div>
 </header>
     <main>
-        <a class="volver" href="../catalogo/patisserie.html"><h5 class="subtitulo_productos">Catálogo > Patisserie</h5></a>
+        <a class="volver" href="../catalogo/patisserie.html"><h5 class="textoVolver">Catálogo > Patisserie</h5></a>
         <div class="container-fluid">
           <div class="row">
-            <div class="col-md-6">
-              <img class="producto" src="../multimedia/Fotos Producto/p_paletas.jpg" alt="jabon paletas">
+            <div class="col-md-6 producto">
+              <img class="img-fluid" src="../multimedia/Fotos Producto/p_paletas.jpg" alt="jabon paletas">
             </div>
             <div class="col-md-6 texto">
-              <h1 class="titulo_producto">Paletas</h1>
+              <h1 class="titulo_productoDos">Paletas</h1>
               <p class="textoP">Divertidos jabones en forma de paletas heladas, a base de coco y glicerina.</p>
               <p class="textoP"><strong>Fragancias disponibles:</strong></p>
                 <div class="container">
@@ -67,43 +67,37 @@
             </div>
           </div>
         </div>
-        <h5 class="subtitulo_productos text-center">Productos relacionados</h5>
-        <div class="container-fluid">
-            <div class="row cartaProducto">
-                <div class="col">
-                    <div class="card carta">
-                        <a href="../productos/patisserieMerengues.html"><img src="../multimedia/Fotos Producto/p_merenguitos.jpg" class="card-img-top" alt="patisserie Merenguitos"></a>
-                        <div class="card-body">
-                        <p class="card-text carta-text">Merenguitos</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card carta">
-                        <a href="../productos/patisserieCupcakes.html"><img src="../multimedia/Fotos Producto/p_cupcakes.jpg" class="card-img-top" alt="patisserie Cupcake"></a>
-                        <div class="card-body">
-                        <p class="card-text carta-text">Cupcake</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card carta">
-                        <a href="../productos/patisserieFlan.html"><img src="../multimedia/Fotos Producto/p_flan con caramelo.jpg" class="card-img-top" alt="patisserie flan"></a>
-                        <div class="card-body">
-                        <p class="card-text carta-text">Flan con caramelo</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                  <div class="card carta">
-                    <a href="../productos/patisseriePie.html"><img src="../multimedia/Fotos Producto/p_lemon_pie.jpg" class="card-img-top" alt="patisserie pie"></a>
-                    <div class="card-body">
-                    <p class="card-text carta-text">Lemon pie</p>
-                    </div>
-                  </div>
-                </div>
+        <h5 class="subtitulo_productos pt-5">Productos relacionados</h5>
+        <div class="row cartaProducto">
+          <div class="col-6 col-md-3 card carta">
+            <a href="../productos/patisserieMerengues.html"><img src="../multimedia/Fotos Producto/p_merenguitos.jpg"
+                class="card-img-top" alt="patisserie Merenguitos"></a>
+            <div class="card-body">
+              <p class="card-text carta-text">Merenguitos</p>
             </div>
           </div>
+          <div class="col-6 col-md-3 card carta">
+            <a href="../productos/patisserieCupcakes.html"><img src="../multimedia/Fotos Producto/p_cupcakes.jpg"
+                class="card-img-top" alt="patisserie Cupcake"></a>
+            <div class="card-body">
+              <p class="card-text carta-text">Cupcake</p>
+            </div>
+          </div>
+          <div class="col-6 col-md-3 card carta">
+              <a href="../productos/patisserieFlan.html"><img src="../multimedia/Fotos Producto/p_flan con caramelo.jpg"
+                  class="card-img-top" alt="patisserie flan"></a>
+              <div class="card-body">
+                <p class="card-text carta-text">Flan con caramelo</p>
+              </div>
+          </div>
+          <div class="col-6 col-md-3 card carta">
+              <a href="../productos/patisseriePie.html"><img src="../multimedia/Fotos Producto/p_lemon_pie.jpg"
+                  class="card-img-top" alt="patisserie pie"></a>
+              <div class="card-body">
+                <p class="card-text carta-text">Lemon pie</p>
+              </div>
+          </div>
+        </div>
     </main>
     <footer>
         <div class="container-fluid borde_pie">
