--- a/productos/patisseriePie.html
+++ b/productos/patisseriePie.html
@@ -31,7 +31,6 @@
                             <a class="nav-link" href="../index.html">Inicio</a>
                             <a class="nav-link" href="../catalogo/general.html">Catalogo</a>
                             <a class="nav-link" href="../pages/nosotros.html">Sobre Nosotros</a>
-                            <!-- <a class="nav-link" href="#">Contactanos</a> -->
                             <a class="nav-link" target="_blanck"href="https://api.whatsapp.com/send?phone=541150099051&amp;text=Hola!&nbsp;dejanos&nbsp;tu&nbsp;mensaje"target="_blank">
                             Contactanos
                             </a>
@@ -43,57 +42,52 @@
     </div>
 </header>
     <main>
-        <a class="volver" href="../catalogo/patisserie.html"><h5 class="subtitulo_productos">Catálogo > Patisserie</h5></a>
+        <a class="volver" href="../catalogo/patisserie.html"><h5 class="textoVolver">Catálogo > Patisserie</h5></a>
         <div class="container-fluid">
           <div class="row">
-            <div class="col-md-6">
-              <img class="producto" src="../multimedia/Fotos Producto/p_lemon_pie.jpg" alt="jabon pie">
+            <div class="col-md-6 producto">
+              <img class="img-fluid" src="../multimedia/Fotos Producto/p_lemon_pie.jpg" alt="jabon pie">
             </div>
             <div class="col-md-6 texto">
-              <h1 class="titulo_producto">Lemon pie</h1>
+              <h1 class="titulo_productoDos">Lemon pie</h1>
               <p class="textoP">UnPara los amantes de las tortas, un jabón a base de coco y glicerina, con un delicioso aroma a cítricos.</p>
               <p class="textoP">Decorá y perfumá tu baño con esta delicatessen.</p>
               <p class="textoP"><strong>Peso aproximado 65 gr.</strong></p>
             </div>
           </div>
         </div>
-        <h5 class="subtitulo_productos text-center">Productos relacionados</h5>
-        <div class="container-fluid">
-            <div class="row cartaProducto">
-                <div class="col">
-                    <div class="card carta">
-                        <a href="../productos/patisserieCupcakes.html"><img src="../multimedia/Fotos Producto/p_cupcakes.jpg" class="card-img-top" alt="patisserie Cupcake"></a>
-                        <div class="card-body">
-                        <p class="card-text carta-text">Cupcake</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                  <div class="card carta">
-                    <a href="../productos/patisserieDonas.html"><img src="../multimedia/Fotos Producto/p_donitas.jpg" class="card-img-top" alt="patisserie donitas"></a>
-                    <div class="card-body">
-                    <p class="card-text carta-text">Donitas</p>
-                    </div>
-                  </div>
-                </div>
-                <div class="col">
-                    <div class="card carta">
-                        <a href="../productos/patisseriePaletas.html"><img src="../multimedia/Fotos Producto/p_paletas.jpg" class="card-img-top" alt="patisserie Paletas"></a>
-                        <div class="card-body">
-                        <p class="card-text carta-text">Paletas</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card carta">
-                        <a href="../productos/patisserieFlan.html"><img src="../multimedia/Fotos Producto/p_flan con caramelo.jpg" class="card-img-top" alt="patisserie flan"></a>
-                        <div class="card-body">
-                        <p class="card-text carta-text">Flan con caramelo</p>
-                        </div>
-                    </div>
-                </div>
+        <h5 class="subtitulo_productos pt-5">Productos relacionados</h5>
+        <div class="row cartaProducto">
+          <div class="col-6 col-md-3 card carta">
+            <a href="../productos/patisserieCupcakes.html"><img src="../multimedia/Fotos Producto/p_cupcakes.jpg"
+                class="card-img-top" alt="patisserie Cupcake"></a>
+            <div class="card-body">
+              <p class="card-text carta-text">Cupcake</p>
             </div>
           </div>
+          <div class="col-6 col-md-3 card carta">
+            <a href="../productos/patisserieDonas.html"><img src="../multimedia/Fotos Producto/p_donitas.jpg" class="card-img-top"
+                alt="patisserie donitas"></a>
+            <div class="card-body">
+              <p class="card-text carta-text">Donitas</p>
+            </div>
+          </div>
+          <div class="col-6 col-md-3 card carta">
+            <a href="../productos/patisseriePaletas.html"><img src="../multimedia/Fotos Producto/p_paletas.jpg"
+                class="card-img-top" alt="patisserie Paletas"></a>
+            <div class="card-body">
+              <p class="card-text carta-text">Paletas</p>
+            </div>
+          </div>
+          <div class="col-6 col-md-3 card carta">
+            <a href="../productos/patisserieFlan.html"><img src="../multimedia/Fotos Producto/p_flan con caramelo.jpg"
+                class="card-img-top" alt="patisserie flan"></a>
+            <div class="card-body">
+              <p class="card-text carta-text">Flan con caramelo</p>
+            </div>
+          </div>
+          
+        </div>    
     </main>
     <footer>
         <div class="container-fluid borde_pie">
