--- a/productos/tocadorPintado.html
+++ b/productos/tocadorPintado.html
@@ -31,7 +31,6 @@
                                 <a class="nav-link" href="../index.html">Inicio</a>
                                 <a class="nav-link" href="../catalogo/general.html">Catalogo</a>
                                 <a class="nav-link" href="../pages/nosotros.html">Sobre Nosotros</a>
-                                <!-- <a class="nav-link" href="#">Contactanos</a> -->
                                 <a class="nav-link" target="_blanck"href="https://api.whatsapp.com/send?phone=541150099051&amp;text=Hola!&nbsp;dejanos&nbsp;tu&nbsp;mensaje"target="_blank">
                                 Contactanos
                                 </a>
@@ -43,14 +42,14 @@
         </div>
     </header>
     <main>
-        <a class="volver" href="../catalogo/tocador.html"><h5 class="subtitulo_productos">Catálogo > Tocador</h5></a>
+        <a class="volver" href="../catalogo/tocador.html"><h5 class="textoVolver">Catálogo > Tocador</h5></a>
         <div class="container-fluid">
           <div class="row">
-            <div class="col-md-6">
-              <img class="producto" src="../multimedia/Fotos Producto/p_ jabones_de _tocador pintados.jpg" alt="tocador pintado">
+            <div class="col-md-6 producto">
+              <img class="img-fluid" src="../multimedia/Fotos Producto/p_ jabones_de _tocador pintados.jpg" alt="tocador pintado">
             </div>
             <div class="col-md-6 texto">
-              <h1 class="titulo_producto">Masajeadores con extractos</h1>
+              <h1 class="titulo_productoDos pt-5">Masajeadores con extractos</h1>
               <p class="textoP">Jabones a base de coco pintados a mano, con diseños exclusivos, originales o a pedido. Fragancias a elección:</p>
               <div class="container">
                 <div class="row">
@@ -85,41 +84,42 @@
             </div>
           </div>
         </div>
-        <h5 class="subtitulo_productos text-center">Productos relacionados</h5>
+        <h5 class="subtitulo_productos pt-5">Productos relacionados</h5>
         <div class="container-fluid">
             <div class="row cartaProducto">
-                <div class="col">
-                    <div class="card carta">
-                        <a href="../productos/tocadorCorazon.html"><img src="../multimedia/Fotos Producto/p_jabones_de_tocador_corazon_diamante_con_nacar.jpg" class="card-img-top" alt="tocador Corazon"></a>
-                        <div class="card-body">
-                        <p class="card-text carta-text">Jabónes de tocador corazon diamante con nácar</p>
-                        </div>
-                    </div>
+              <div class="col-6 col-md-3 card carta">
+                <a href="../productos/tocadorCorazon.html"><img
+                    src="../multimedia/Fotos Producto/p_jabones_de_tocador_corazon_diamante_con_nacar.jpg" class="card-img-top"
+                    alt="tocador Corazon"></a>
+                <div class="card-body">
+                  <p class="card-text carta-text">Jabónes de tocador corazon diamante con nácar</p>
                 </div>
-                <div class="col">
-                    <div class="card carta">
-                        <a href="../productos/tocadorRedondo.html"><img src="../multimedia/Fotos Producto/p_jabones_de_tocador_redondos_rectangulares.jpg" class="card-img-top" alt="tocador Pintado"></a>
-                        <div class="card-body">
-                        <p class="card-text carta-text">Jabones de tocador redondos/ rectangulares </p>
-                        </div>
-                    </div>
+              </div>
+              <div class="col-6 col-md-3 card carta">
+                <a href="../productos/tocadorRedondo.html"><img
+                    src="../multimedia/Fotos Producto/p_jabones_de_tocador_redondos_rectangulares.jpg" class="card-img-top"
+                    alt="tocador Pintado"></a>
+                <div class="card-body">
+                  <p class="card-text carta-text">Jabones de tocador redondos/ rectangulares </p>
                 </div>
-                <div class="col">
-                  <div class="card carta">
-                      <a href="../productos/exfoliantePies.html"><img src="../multimedia/Fotos Producto/p_jabones_exfoliantes_para_pies.jpg" class="card-img-top" alt="exfoliante pies"></a>
-                      <div class="card-body">
-                      <p class="card-text carta-text p-2 m1">Jabónes exfoliantes para pies</p>
-                      </div>
-                  </div>
+              </div>
+              <div class="col-6 col-md-3 card carta">
+                <a href="../productos/exfoliantePies.html"><img
+                    src="../multimedia/Fotos Producto/p_jabones_exfoliantes_para_pies.jpg" class="card-img-top"
+                    alt="exfoliante pies"></a>
+                <div class="card-body">
+                  <p class="card-text carta-text p-2 m1">Jabónes exfoliantes para pies</p>
                 </div>
-                <div class="col">
-                    <div class="card carta">
-                        <a href="../productos/exfolianteCorporal.html"><img src="../multimedia/Fotos Producto/p_jabones_exfoliantes_corporales.jpg" class="card-img-top" alt="exfoliante corporales"></a>
-                        <div class="card-body">
-                        <p class="card-text carta-text p-2 m-1">Jabónes exfoliantes corporales</p>
-                        </div>
-                    </div>
+              </div>
+              <div class="col-6 col-md-3 card carta">
+                <a href="../productos/exfolianteCorporal.html"><img
+                    src="../multimedia/Fotos Producto/p_jabones_exfoliantes_corporales.jpg" class="card-img-top"
+                    alt="exfoliante corporales"></a>
+                <div class="card-body">
+                  <p class="card-text carta-text p-2 m-1">Jabónes exfoliantes corporales</p>
                 </div>
+              </div>
+            
             </div>
           </div>
     </main>
