--- a/productos/tocadorSemanal.html
+++ b/productos/tocadorSemanal.html
@@ -43,14 +43,14 @@
         </div>
     </header>
     <main>
-        <a class="volver" href="../catalogo/tocador.html"><h5 class="subtitulo_productos">Catálogo > Tocador</h5></a>
+        <a class="volver" href="../catalogo/tocador.html"><h5 class="textoVolver">Catálogo > Tocador</h5></a>
         <div class="container-fluid">
           <div class="row">
-            <div class="col-md-6">
-              <img class="producto" src="../multimedia/Fotos Producto/p_jabones_de_tocador_semanal.jpg" alt="tocador semanal">
+            <div class="col-md-6 producto">
+              <img class="img-fluid" src="../multimedia/Fotos Producto/p_jabones_de_tocador_semanal.jpg" alt="tocador semanal">
             </div>
             <div class="col-md-6 texto">
-              <h1 class="titulo_producto">Jabón de tocador semanal</h1>
+              <h1 class="titulo_productoDos">Jabón de tocador semanal</h1>
               <p class="textoP">El jabón masajeador estimula la circulación sanguínea y relaja los músculos. Son a base de coco. Peso aproximado 120 gr.</p>
                 <div class="container">
                   <div class="row">
@@ -68,41 +68,41 @@
             </div>
           </div>
         </div>
-        <h5 class="subtitulo_productos text-center">Productos relacionados</h5>
+        <h5 class="subtitulo_productos pt-5">Productos relacionados</h5>
         <div class="container-fluid">
             <div class="row cartaProducto">
-                <div class="col">
-                    <div class="card carta">
-                        <a href="../productos/tocadorCorazon.html"><img src="../multimedia/Fotos Producto/p_jabones_de_tocador_corazon_diamante_con_nacar.jpg" class="card-img-top" alt="tocador Corazon"></a>
-                        <div class="card-body">
-                        <p class="card-text carta-text">Jabónes de tocador corazon diamante con nácar</p>
-                        </div>
-                    </div>
+              <div class="col-6 col-md-3 card carta">
+                <a href="../productos/tocadorCorazon.html"><img
+                    src="../multimedia/Fotos Producto/p_jabones_de_tocador_corazon_diamante_con_nacar.jpg" class="card-img-top"
+                    alt="tocador Corazon"></a>
+                <div class="card-body">
+                  <p class="card-text carta-text">Jabónes de tocador corazon diamante con nácar</p>
                 </div>
-                <div class="col">
-                    <div class="card carta">
-                        <a href="../productos/tocadorPintado.html"><img src="../multimedia/Fotos Producto/p_ jabones_de _tocador pintados.jpg" class="card-img-top" alt="tocador Pintado"></a>
-                        <div class="card-body">
-                        <p class="card-text carta-text p-2 m-1">Jabones de tocador pintado</p>
-                        </div>
-                    </div>
+              </div>
+              <div class="col-6 col-md-3 card carta">
+                <a href="../productos/tocadorPintado.html"><img
+                    src="../multimedia/Fotos Producto/p_ jabones_de _tocador pintados.jpg" class="card-img-top"
+                    alt="tocador Pintado"></a>
+                <div class="card-body">
+                  <p class="card-text carta-text p-2 m-1">Jabones de tocador pintado</p>
                 </div>
-                <div class="col">
-                    <div class="card carta">
-                        <a href="../productos/masajeadorExtractos.html"><img src="../multimedia/Fotos Producto/p_masajeador_con_extractos.jpg" class="card-img-top" alt="masajeador Extractos"></a>
-                        <div class="card-body">
-                        <p class="card-text carta-text p-2 m-1">Masajeador con extractos</p>
-                        </div>
-                    </div>
+              </div>
+              <div class="col-6 col-md-3 card carta">
+                <a href="../productos/masajeadorExtractos.html"><img
+                    src="../multimedia/Fotos Producto/p_masajeador_con_extractos.jpg" class="card-img-top"
+                    alt="masajeador Extractos"></a>
+                <div class="card-body">
+                  <p class="card-text carta-text p-2 m-1">Masajeador con extractos</p>
                 </div>
-                <div class="col">
-                    <div class="card carta">
-                        <a href="../productos/exfolianteCorporal.html"><img src="../multimedia/Fotos Producto/p_jabones_exfoliantes_corporales.jpg" class="card-img-top" alt="exfoliante corporales"></a>
-                        <div class="card-body">
-                        <p class="card-text carta-text p-2 m-1">Jabónes exfoliantes corporales</p>
-                        </div>
-                    </div>
+              </div>
+              <div class="col-6 col-md-3 col-6 col-md-3 card carta">
+                <a href="../productos/exfolianteCorporal.html"><img
+                    src="../multimedia/Fotos Producto/p_jabones_exfoliantes_corporales.jpg" class="card-img-top"
+                    alt="exfoliante corporales"></a>
+                <div class="card-body">
+                  <p class="card-text carta-text p-2 m-1">Jabónes exfoliantes corporales</p>
                 </div>
+              </div>
             </div>
           </div>
     </main>
