--- a/productos/tocadorCorazon.html
+++ b/productos/tocadorCorazon.html
@@ -43,7 +43,7 @@
         </div>
     </header>
     <main>
-        <a class="volver" href="../catalogo/tocador.html"><h5 class="subtitulo_productos">Catálogo > Tocador</h5></a>
+        <a class="volver" href="../catalogo/tocador.html"><h5 class="textoVolver">Catálogo > Tocador</h5></a>
         <div class="container-fluid">
           <div class="row">
             <div class="col-md-6 producto">
@@ -56,40 +56,37 @@
             </div>
           </div>
         </div>
-        <h5 class="subtitulo_productos text-center">Productos relacionados</h5>
+        <h5 class="subtitulo_productos pt-5">Productos relacionados</h5>
             <div class="row cartaProducto">
-                <div class="col-6 col-md-3">
-                    <div class="card carta">
-                        <a href="../productos/tocadorSemanal.html"><img src="../multimedia/Fotos Producto/p_jabones_de_tocador_semanal.jpg" class="card-img-top" alt="tocador semanal"></a>
-                        <div class="card-body">
-                        <p class="card-text carta-text p-2 m-1">Jabónes de tocador semanal</p>
-                        </div>
-                    </div>
+              <div class="col-6 col-md-3 card carta">
+                <a href="../productos/tocadorSemanal.html"><img src="../multimedia/Fotos Producto/p_jabones_de_tocador_semanal.jpg"
+                    class="card-img-top" alt="tocador semanal"></a>
+                <div class="card-body">
+                  <p class="card-text carta-text p-2 m-1">Jabónes de tocador semanal</p>
                 </div>
-                <div class="col-6 col-md-3">
-                    <div class="card carta">
-                        <a href="../productos/bolsitasGemas.html"><img src="../multimedia/Fotos Producto/p_gemas_dulces.jpg" class="card-img-top" alt="bolsita gemas"></a>
-                        <div class="card-body">
-                        <p class="card-text carta-text p-2 m-1">Gemas dulces - Bolsitas</p>
-                        </div>
-                    </div>
+              </div>
+              <div class="col-6 col-md-3 card carta">
+                <a href="../productos/bolsitasGemas.html"><img src="../multimedia/Fotos Producto/p_gemas_dulces.jpg"
+                    class="card-img-top" alt="bolsita gemas"></a>
+                <div class="card-body">
+                  <p class="card-text carta-text p-2 m-1">Gemas dulces - Bolsitas</p>
                 </div>
-                <div class="col-6 col-md-3">
-                    <div class="card carta">
-                        <a href="../productos/patisseriePaletas.html"><img src="../multimedia/Fotos Producto/p_paletas.jpg" class="card-img-top" alt="patisserie paletas"></a>
-                        <div class="card-body">
-                        <p class="card-text carta-text p-2 m-1">Paletas</p>
-                        </div>
-                    </div>
+              </div>
+              <div class="col-6 col-md-3 card carta">
+                <a href="../productos/patisseriePaletas.html"><img src="../multimedia/Fotos Producto/p_paletas.jpg"
+                    class="card-img-top" alt="patisserie paletas"></a>
+                <div class="card-body">
+                  <p class="card-text carta-text p-2 m-1">Paletas</p>
                 </div>
-                <div class="col-6 col-md-3">
-                    <div class="card carta">
-                       <a href="../productos/tocadorRedondo.html"><img src="../multimedia/Fotos Producto/p_jabones_de_tocador_redondos_rectangulares.jpg" class="card-img-top" alt="tocador redondo"></a>
-                        <div class="card-body">
-                        <p class="card-text carta-text">Jabones de tocador redondos/recangulares</p>
-                        </div>
-                    </div>
+              </div>
+              <div class="col-6 col-md-3  card carta">
+                <a href="../productos/tocadorRedondo.html"><img
+                    src="../multimedia/Fotos Producto/p_jabones_de_tocador_redondos_rectangulares.jpg" class="card-img-top"
+                    alt="tocador redondo"></a>
+                <div class="card-body">
+                  <p class="card-text carta-text">Jabones de tocador redondos/recangulares</p>
                 </div>
+              </div>
             </div>
     </main>
     <footer>
