--- a/productos/tocadorRedondo.html
+++ b/productos/tocadorRedondo.html
@@ -31,7 +31,6 @@
                                 <a class="nav-link" href="../index.html">Inicio</a>
                                 <a class="nav-link" href="../catalogo/general.html">Catalogo</a>
                                 <a class="nav-link" href="../pages/nosotros.html">Sobre Nosotros</a>
-                                <!-- <a class="nav-link" href="#">Contactanos</a> -->
                                 <a class="nav-link" target="_blanck"href="https://api.whatsapp.com/send?phone=541150099051&amp;text=Hola!&nbsp;dejanos&nbsp;tu&nbsp;mensaje"target="_blank">
                                 Contactanos
                                 </a>
@@ -43,16 +42,15 @@
         </div>
     </header>
     <main>
-        <a class="volver" href="../catalogo/tocador.html"><h5 class="subtitulo_productos">Catálogo > Tocador</h5></a>
+        <a class="volver" href="../catalogo/tocador.html"><h5 class="textoVolver">Catálogo > Tocador</h5></a>
         <div class="container-fluid">
           <div class="row">
-            <div class="col-md-6">
-              <img class="producto" src="../multimedia/Fotos Producto/p_jabones_de_tocador_redondos_rectangulares.jpg" alt="tocador redondos">
+            <div class="col-md-6 producto">
+              <img class="img-fluid" src="../multimedia/Fotos Producto/p_jabones_de_tocador_redondos_rectangulares.jpg" alt="tocador redondos">
             </div>
             <div class="col-md-6 texto">
-              <h1 class="titulo_producto">Masajeadores con extractos</h1>
+              <h1 class="titulo_productoDos">Masajeadores con extractos</h1>
               <p class="textoP">Jabones de Glicerina o base coco;</p>
-                <div class="container">
                   <div class="row">
                     <div class="col-md-6">
                       <strong><ul>
@@ -77,7 +75,6 @@
                         <li>Floral</li>
                       </ul></strong>
                     </div>
-                  </div>
                 </div>
                 <p class="textoP">Redondo 60 gr.</p>
                 <p class="textoP">Rectangular 100 gr.</p>
@@ -88,7 +85,7 @@
         <h5 class="subtitulo_productos text-center">Productos relacionados</h5>
         <div class="container-fluid">
             <div class="row cartaProducto">
-                <div class="col">
+                <div class="col-6 col-md-3">
                     <div class="card carta">
                         <a href="../productos/tocadorPintado.html"><img src="../multimedia/Fotos Producto/p_ jabones_de _tocador pintados.jpg" class="card-img-top" alt="tocador Pintado"></a>
                         <div class="card-body">
@@ -96,7 +93,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col-6 col-md-3">
                     <div class="card carta">
                         <a href="../productos/tocadorSemanal.html"><img src="../multimedia/Fotos Producto/p_jabones_de_tocador_semanal.jpg" class="card-img-top" alt="tocador Semanal"></a>
                         <div class="card-body">
@@ -104,7 +101,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col-6 col-md-3">
                     <div class="card carta">
                         <a href="../productos/exfoliantePies.html"><img src="../multimedia/Fotos Producto/p_jabones_exfoliantes_para_pies.jpg" class="card-img-top" alt="exfoliante pies"></a>
                         <div class="card-body">
@@ -112,7 +109,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col-6 col-md-3">
                     <div class="card carta">
                         <a href="../productos/exfolianteCorporal.html"><img src="../multimedia/Fotos Producto/p_jabones_exfoliantes_corporales.jpg" class="card-img-top" alt="exfoliante corporales"></a>
                         <div class="card-body">
